logs_student/vector_main/vector_constructor.log
main/vector_main/push_back.cpp:21:18: error: implicit conversion from 'long' to 'const ft::vector<int>::value_type' (aka 'const int') changes value from 1412432432432 to -611807952 [-Werror,-Wconstant-conversion]
    s1.push_back(1412432432432);
       ~~~~~~~~~ ^~~~~~~~~~~~~
1 error generated.
